# simple-addon

./: CMakeLists.txt  main.js  test.js
addon/: CMakeLists.txt  addon.cpp  simple-worker.h
